--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "next": "14.2.5",
+    "next-mdx-remote": "^5.0.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sugar-high": "^0.7.0"
   },
   "devDependencies": {
     "@types/node": "^20",
